@@ -26,6 +26,9 @@
 # wright@imbs.uni-luebeck.de
 # -------------------------------------------------------------------------------
 
+##' @export
+importance <- function(x, ...)  UseMethod("importance")
+
 ##' Extract variable importance of Ranger object.
 ##'
 ##'
@@ -36,8 +39,8 @@
 ##' @seealso \code{\link{ranger}}
 ##' @author Marvin N. Wright
 ##' @aliases importance
-##' @export
-importance.ranger <- function(x) {
+##' @export importance.ranger
+importance.ranger <- function(x, ...) {
   if (class(x) != "ranger") {
     stop("Object ist no ranger object.")
   }
